nonmanuals vertaalprogramma werkend

--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -62,9 +62,6 @@
   <div id="avatarTranslator" class="container-fluid" style="width: 100%;">
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-          <!-- Column for info -->
-          <div class="col-12 col-md-2">
-          </div>
             <!-- Column for info -->
             <div class="col-12 col-md-5">
                 <!-- CWA signing avatar panel 0 -->
@@ -75,7 +72,7 @@
                     <p class="mb-4">
                       Powered by the <b><a href="https://vh.cmp.uea.ac.uk/index.php/JASigning" target="_blank">JASigning avatar engine</a></b>.
                     </p>
-                  </div>
+                </div>
                 <!--================================================================-->
             </div>
 
@@ -98,7 +95,7 @@
                     </div>
 
                     <!-- This button exists so that the ZonMw scripts know that the demo option is active -->
-                    <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked>
+                    <!-- <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked> -->
 
                     <form autocomplete="off">
                       <div id="autocomp" class="autocomplete" style="max-width:400px;">
@@ -422,12 +419,6 @@
 <script language="javascript" type="text/javascript" src="js/general.js"></script>
 <!-- script specific to main page -->
 <script language="javascript" type="text/javascript" src="js/signlab.js"></script>
-<!-- These variables are defined so that the dicts from the ZonMw project can be used -->
-<!-- <script type="text/javascript">
-  var sentPath;
-  var vidPath;
-  var varPath;
-</script> -->
 </div>
 </body>
 </html>
