--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -283,6 +283,8 @@
 <script language="javascript" type="text/javascript" src="js/general.js"></script>
 <!-- script specific to main page -->
 <script language="javascript" type="text/javascript" src="js/signlab.js"></script>
+<!-- script for languages
+<script language="javascript" type="text/javascript" src="js/NS_sentences_EN.js"></script>-->
 </div>
 </body>
 </html>
