--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -178,7 +178,7 @@
                     
                     <br>
                     <br>
-                    <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("sentenceOptions").value, "alertMainTran");'/>
+                    <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("sentenceInput").innerText, "alertMainTran");'/>
                     <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
                     <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
                     <br>
