auto fill interStation variables

--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -125,7 +125,7 @@
 
                     <div id="trainTypeBox" class="varBox leftSpace">
                       <label id="trainType" for="trainType" style="display: inline-block;"></label>
-                      <select class="selectpicker" name="trainType" id="trainTypeInput" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.trainType, this.name);">
+                      <select class="selectpicker" name="trainType" id="trainTypeInput" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.trainType, this.name);">
                         <option value="intercity">Intercity</option>
                         <option value="sprinter">Sprinter</option>
                       </select>
@@ -133,7 +133,7 @@
 
                     <div id="platformBox" class="varBox leftSpace">
                      <label id="platform" for="platform" style="display: inline-block"></label>
-                     <select class="selectpicker" name="platformNr" id="platformInput" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.platformNr, this.name);">
+                     <select class="selectpicker" name="platformNr" id="platformInput" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.platformNr, this.name);">
                         <option value="1">1</option>
                         <option value="1a">1a</option>
                         <option value="1b">1b</option>
@@ -149,37 +149,37 @@
 
                     <div id="waitTimeBox" class="varBox leftSpace">
                       <label id="waitTime" for="waitTime" style="display: inline-block"></label>
-                      <select class="selectpicker" name="waitTime" id="waitOptions" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.waitTime, this.name);">
+                      <select class="selectpicker" name="waitTime" id="waitOptions" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.waitTime, this.name);">
                       </select>
                     </div>
                     
                     <div id="interStationBox1" class="varBox leftSpace">
                       <label id="interStation1" for="interStation1" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation1" id="interStationOptions1" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation1, this.name);">
+                      <select class="selectpicker" name="interStation1" id="interStationOptions1" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.interStation1, this.name);">
                       </select>
                     </div>
 
                     <div id="interStationBox2" class="varBox leftSpace">
                       <label id="interStation2" for="interStation2" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation2" id="interStationOptions2" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation2, this.name);">
+                      <select class="selectpicker" name="interStation2" id="interStationOptions2" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.interStation2, this.name);">
                       </select>
                     </div>
 
                     <div id="interStationBox3" class="varBox leftSpace">
                       <label id="interStation3" for="interStation3" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation3" id="interStationOptions3" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation3, this.name);">
+                      <select class="selectpicker" name="interStation3" id="interStationOptions3" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.interStation3, this.name);">
                       </select>
                     </div>
 
                     <div id="interStationBox4" class="varBox leftSpace">
                       <label id="interStation4" for="interStation4" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation4" id="interStationOptions4" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation4, this.name);">
+                      <select class="selectpicker" name="interStation4" id="interStationOptions4" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.interStation4, this.name);">
                       </select>
                     </div>
                     
                     <div id="endStationBox" class="varBox leftSpace">
                       <label id="endStation" for="endStation" style="display: inline-block"></label>
-                      <select class="selectpicker" name="endStation" id="endStationOptions" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.endStation, this.name);">
+                      <select class="selectpicker" name="endStation" id="endStationOptions" onchange="replaceText(globalVar.currentSentence, globalVar.currentSentenceColored, this.value, globalVar.endStation, this.name);">
                       </select>
                     </div>
 
