--- a/people.html
+++ b/people.html
@@ -108,6 +108,7 @@
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
                       Shani Mende-Gillings (Researcher)<br>
+                      Gomer Ottenspeer (Motion capture specialist)<br>
                     </p>
                     <h5>
                       PhD alumni
