--- a/people.html
+++ b/people.html
@@ -105,6 +105,7 @@
                     <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
                       Lyke Esselink (Researcher)<br>
+                      Britt van Gemert (Researcher)<br>
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
                       Shani Mende-Gillings (Researcher)<br>
