--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -122,6 +122,10 @@
                     <div class="mb-3 row align-items-start no-gutters">
                       <div id="variablesLabel" style="display: block"></div>
                     </div>
+                    <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("currSentence").innerText, "alertMainTran");'/>
+                    <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
+                    <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
+                    <br>
 
                     <div id="trainTypeBox" class="varBox leftSpace">
                       <label id="trainType" for="trainType" style="display: inline-block;"></label>
@@ -133,7 +137,7 @@
 
                     <div id="platformBox" class="varBox leftSpace">
                      <label id="platform" for="platform" style="display: inline-block"></label>
-                     <select class="selectpicker" name="platformNr" id="platformOptions" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.platformNr, this.name);">
+                     <select class="selectpicker" name="platformNr" id="platformNrOptions" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.platformNr, this.name);">
                       <!-- NUMBERS 1-4 INTERFERE WITH INTERMEDIATE STATION NRS-->
                         <option value="'5'">'5'</option>
                         <option value="'1a'">'1a'</option>
@@ -150,31 +154,31 @@
 
                     <div id="waitTimeBox" class="varBox leftSpace">
                       <label id="waitTime" for="waitTime" style="display: inline-block"></label>
-                      <select class="selectpicker" name="waitTime" id="waitOptions" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.waitTime, this.name);">
+                      <select class="selectpicker" name="waitTime" id="waitTimeOptions" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.waitTime, this.name);">
                       </select>
                     </div>
                     
                     <div id="interStationBox1" class="varBox leftSpace">
                       <label id="interStation1" for="interStation1" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation1" id="interStationOptions1" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation1, this.name);">
+                      <select class="selectpicker" name="interStation1" id="interStation1Options" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation1, this.name);">
                       </select>
                     </div>
 
                     <div id="interStationBox2" class="varBox leftSpace">
                       <label id="interStation2" for="interStation2" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation2" id="interStationOptions2" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation2, this.name);">
+                      <select class="selectpicker" name="interStation2" id="interStation2Options" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation2, this.name);">
                       </select>
                     </div>
 
                     <div id="interStationBox3" class="varBox leftSpace">
                       <label id="interStation3" for="interStation3" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation3" id="interStationOptions3" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation3, this.name);">
+                      <select class="selectpicker" name="interStation3" id="interStation3Options" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation3, this.name);">
                       </select>
                     </div>
 
                     <div id="interStationBox4" class="varBox leftSpace">
                       <label id="interStation4" for="interStation4" style="display: inline-block"></label>
-                      <select class="selectpicker" name="interStation4" id="interStationOptions4" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation4, this.name);">
+                      <select class="selectpicker" name="interStation4" id="interStation4Options" onchange="replaceText(globalVar.currentSentence, this.value, globalVar.interStation4, this.name);">
                       </select>
                     </div>
                     
@@ -185,9 +189,6 @@
                     </div>
 
                     <br>
-                    <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("currSentence").innerText, "alertMainTran");'/>
-                    <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
-                    <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
                     <br>
                     <br>
                     <br>
