meerdere playURL achter elkaar + NL gefixt

--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("currSentence").innerText, "alertMainTran");'/>
                     <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
-                    <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
+                    <!-- <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">-->
                     <br>
 
                     <div id="trainTypeBox" class="varBox leftSpace">
@@ -292,11 +292,6 @@
 <!-- script for generating avatar animations -->
 <script type="text/javascript" src="cwa/allcsa.js"> </script>
 <!-- =============================================== -->
-
-<!-- JSON scripts for sentences -->
-<script type="text/javascript" src="json/json_sentences_English.json"></script>
-<script type="text/javascript" src="json/json_sentences_Nederlands.json"></script>
-
 
 <!-- script for communication with and set up of the avatar -->
 <script language="javascript" type="text/javascript" src="js/avatar.js"></script>
