niet-gebaar toegevoegd + vars automatisch uit array in regex

--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
-<html lang="en">
+<!-- class="notranslate", translate="no", name="google" content="notranslate" => to prevent automatic translation, which breaks functionality -->
+<html lang="en" class="notranslate" translate="no">
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="google" content="notranslate" />
 
 <title>SignLab Amsterdam NS demo</title>
 
