--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>SignLab Amsterdam</title>
+<!-- <title>SignLab Amsterdam</title> -->
 
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Icon -->
-<link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
+<link rel="icon" type="image/x-icon" href="images/signlab_logo_tr.png" />
 
 <!-- =============================================== -->
 <!-- Fonts -->
