--- a/nav.html
+++ b/nav.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container-fluid" style="width: 83%; margin-top: 0px;">
         <a class="navbar-brand" href="index.html">
-        <img src="images/hand-icon.png" height="25">
-          SignLab Amsterdam
+        <img src="images/signlab_logo_tr.png" height="25">
+          <!-- SignLab Amsterdam -->
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu 
+            Menu
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
