--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
                 </p>
                 <div id="collapseOne" class="collapse">
               <p class="mb-4">
-                We present a number of methodological recommendations concerning the online evaluation of avatars for text-to-sign translation, 
+                We present a number of methodological recommendations concerning the online evaluation of avatars for text-to-sign translation,
                 focusing on the structure, format and length of the question- naire, as well as methods for eliciting and faithfully transcribing responses.
               </p>
               </div>
@@ -99,10 +99,10 @@
                 <div id="collapseOne" class="collapse">
               <p class="mb-4">
                 Communication between healthcare professionals and deaf patients is challenging, and the current COVID-19 pandemic makes
-                 this issue even more acute. Sign language interpreters can often not enter hospitals and face masks make lipreading impossible. 
-                 To address this urgent problem, we developed a system which allows healthcare professionals to translate sentences that are 
+                 this issue even more acute. Sign language interpreters can often not enter hospitals and face masks make lipreading impossible.
+                 To address this urgent problem, we developed a system which allows healthcare professionals to translate sentences that are
                  frequently used in the diagnosis and treatment of COVID-19 into Sign Language of the Netherlands (NGT). Translations are displayed
-                  by means of videos and avatar animations. The architecture of the system is such that it could be extended to other applications 
+                  by means of videos and avatar animations. The architecture of the system is such that it could be extended to other applications
                   and other sign languages in a relatively straightforward way.
               </p>
               </div>
@@ -195,6 +195,24 @@
           </div>
           </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+          <div class="project-text pb-1 w-100 my-auto text-left textDIV">
+            <div class="collapseTransform">
+              <h4>Text-To-Sign Translation: Making Information Accessible</h4>
+                <p class="mb-4">
+                  <b>Year:</b> 2021 <br>
+                  <b>Authors:</b> F. Roelofsen, L.D. Esselink <br>
+                  <b>Type:</b> Presitation slides from seminar<br>
+                  <a href="publications/SeminarSlides.pdf" download="Slides">Download presentation <i class="bi bi-download"></i></a>
+                  <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+                </p>
+                <div id="collapseOne" class="collapse">
+              <p class="mb-4">
+                These are the presentation slides from a seminar given by Lyke Esselink on the work of SignLab.
+              </p>
+              </div>
+            </div>
+            <hr class="d-none d-lg-block mb-0 ml-0"/>
           </div>
       </div>
 
