logo plaatjes, presentation update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Icon -->
-<link rel="icon" type="image/x-icon" href="images/signlab_logo_tr.png" />
+<link rel="icon" type="image/x-icon" href="images/Plaatje_logo_tr.png" />
 
 <!-- =============================================== -->
 <!-- Fonts -->
