--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,24 @@
           </div>
           <div class="project-text pb-1 w-100 my-auto text-left publicationDIV">
             <div class="collapseTransform">
+              <h4>Text-To-Sign Translation: Making Information Accessible</h4>
+                <p class="mb-4">
+                  <b>Year:</b> 2021 <br>
+                  <b>Authors:</b> F. Roelofsen, L.D. Esselink <br>
+                  <b>Type:</b> Presentation slides from seminar<br>
+                  <a href="publications/SeminarSlides.pdf" download="Slides">Download presentation <i class="bi bi-download"></i></a>
+                  <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+                </p>
+                <div id="collapseOne" class="collapse">
+              <p class="mb-4">
+                These are the presentation slides from a seminar given by Lyke Esselink on the work of SignLab.
+              </p>
+              </div>
+            </div>
+            <hr class="d-none d-lg-block mb-0 ml-0"/>
+          </div>
+          <div class="project-text pb-1 w-100 my-auto text-left publicationDIV">
+            <div class="collapseTransform">
             <h4>Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</h4>
               <p class="mb-4">
                 <b>Year:</b> 2020 <br>
@@ -195,24 +213,6 @@
           </div>
           </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
-          </div>
-          <div class="project-text pb-1 w-100 my-auto text-left textDIV">
-            <div class="collapseTransform">
-              <h4>Text-To-Sign Translation: Making Information Accessible</h4>
-                <p class="mb-4">
-                  <b>Year:</b> 2021 <br>
-                  <b>Authors:</b> F. Roelofsen, L.D. Esselink <br>
-                  <b>Type:</b> Presitation slides from seminar<br>
-                  <a href="publications/SeminarSlides.pdf" download="Slides">Download presentation <i class="bi bi-download"></i></a>
-                  <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
-                </p>
-                <div id="collapseOne" class="collapse">
-              <p class="mb-4">
-                These are the presentation slides from a seminar given by Lyke Esselink on the work of SignLab.
-              </p>
-              </div>
-            </div>
-            <hr class="d-none d-lg-block mb-0 ml-0"/>
           </div>
       </div>
 
