media tabblad, navbar logo

--- a/nav.html
+++ b/nav.html
@@ -20,6 +20,7 @@
                 <!-- <li class="nav-item"><a class="nav-link" href="tutorial.html">Tutorial</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="projects.html" id="ProjectsNav">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="media.html" id="MediaNav">Media</a></li>
             </ul>
         </div>
     </div>
