--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<!-- <title>SignLab Amsterdam</title> -->
+<title>SignLab Amsterdam</title>
 
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
@@ -112,11 +112,19 @@
 
             <!-- Column for GIF -->
             <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+
               <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
 
               <div class="mt-5">
                   <img src="images/logo-uva.png" class="img-fluid" style="image-orientation:portrait;" alt="University of Amsterdam">
               </div>
+
+              <p class="mb-5">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe src="https://www.youtube.com/embed/XdMVs0rVDAs?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              </p>
+
             </div>
           </div>
     </div>
