ATLAS img en homepage anders

--- a/media.html
+++ b/media.html
@@ -123,7 +123,15 @@
           <!-- Column for GIF -->
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
             <img src="htmlvideos/publications.gif" class="img-fluid" alt="Avatar signing 'YOU MORE READ WANT?'">
+
+
+            <div class="mt-5">
+              <br><br><br><br><br>
+              <a href="https://www.npostart.nl/atlas/22-09-2021/VPWON_1328190" target="_blank"><img src="images/Atlas-2021.png" class="img-fluid" alt="A screenshot of the ATLAS interview segment on SignLab Amsterdam."></a>
+            </div>
+
           </div>
+
         </div>
     </div>
 
