--- a/translate.html
+++ b/translate.html
@@ -95,7 +95,16 @@
 
             <!-- Column for GIF -->
             <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
-              <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
+              <!-- <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'"> -->
+              <p class="mb-5">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe src="https://www.youtube.com/embed/XdMVs0rVDAs?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              </p>
+
+              <div class="mt-5">
+                <a href="https://www.npostart.nl/atlas/22-09-2021/VPWON_1328190" target="_blank"><img src="images/Atlas-2021.png" class="img-fluid" alt="A screenshot of the ATLAS interview segment on SignLab Amsterdam."></a>
+              </div>
             </div>
           </div>
     </div>
