--- a/translate.html
+++ b/translate.html
@@ -98,7 +98,7 @@
               <!-- <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'"> -->
               <p class="mb-5">
                 <div class="embed-responsive embed-responsive-16by9">
-                  <iframe src="https://www.youtube.com/embed/XdMVs0rVDAs?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/_uk4fL7yXwQ?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </p>
 
