--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -85,6 +85,7 @@
                 <span class="CWASAAvatar av0" id="avatar"></span>
                     <br>
                     <input class="av0 txtGloss subtitles col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
+                    <!--<input class="av0 subtitles col-mb-5" id="animationProgress" value="x" type="text" readonly="readonly"></input>-->
                     <br>
                     <input type="button" class="btn btn-primary" id="play" value="Play" onclick='getSentenceArray(document.getElementById("currSentence").innerText, "alertMainTran");'/>
                     <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML(); makePlayClickable();' />
