standaard taal NL

--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -116,8 +116,8 @@
             <label id="selectExplain" for="inputLanguageForm" class="col-sm col-form-label"></label>
               <div class="col-sm">
                 <select id="inputLanguageForm" class="form-select" onchange="changeLanguage(this.value);" style="margin-bottom: 0px; max-width: 200px;">
-                  <option selected value="English">English</option>
-                  <option value="Nederlands">Nederlands</option>
+                  <option value="English">English</option>
+                  <option selected value="Nederlands">Nederlands</option>
                 </select>
               </div>
           </div>
